k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: confidential-filter
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: app
    app.kubernetes.io/part-of: confidential-filter
  ports:
    - name: http
      port: 8000
      targetPort: http
      nodePort: 30080
